--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -64,11 +64,11 @@
 
 
         <label class="item">
-          <button class="button button-block button-positive" ng-click="saveArtistProfile(picFile)">Update</button>
+          <button class="button button-block button-positive" ng-click="updateProfile()">Update</button>
         </label>
 
         <label class="item">
-          <button class="button button-block button-assertive" ng-click="saveArtistProfile(picFile)">Logout</button>
+          <button class="button button-block button-assertive" ng-click="doLogout()">Logout</button>
         </label>
 
       </div>
