--- a/www/templates/manage-services.html
+++ b/www/templates/manage-services.html
@@ -2,53 +2,31 @@
   <ion-content>
 
     <label class="item" style="border-top-width: 0px;">
-      <button class="button button-block button-royal" ng-click="saveArtistProfile(picFile)">Add New Service</button>
+      <button class="button button-block button-royal" ng-click="addService()">Add New Service</button>
     </label>
 
 
     <div class="item item-divider">
-      My Services (<b>2</b>)
+      My Services (<b>{{artistServices.length}}</b>)
     </div>
 
-    <div class="card">
+    <div class="card" ng-repeat="service in artistServices">
       <div style="height: 50px;" class="item item-divider item-button-right">
-        Fresh & Dewy
-        <button class="button button-positive">
+        {{service.attributes.name}}
+        <button class="button button-positive" ng-click="editService(service)">
           <i class="icon ion-edit"></i>
         </button>
       </div>
       <div class="item item-text-wrap">
-        Perfect for sunny occasions and daytime glam.
+        {{service.attributes.description}}
       </div>
       <div class="item item-divider">
         <div class="row" style="padding-left: 0px;">
           <div class="col">
-            <span><b>Duration</b>: 60 mins</span>
+            <span><b>Duration</b>: {{service.attributes.duration}} mins</span>
           </div>
           <div class="col">
-            <span class="text-right"><b>Price</b>: P800</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div style="height: 50px;" class="item item-divider item-button-right">
-        Modern Muse
-        <button class="button button-positive">
-          <i class="icon ion-edit"></i>
-        </button>        
-      </div>
-      <div class="item item-text-wrap">
-        Full makeup, perfect for evening occasions and that perfect selfie!
-      </div>
-      <div class="item item-divider">
-        <div class="row" style="padding-left: 0px;">
-          <div class="col">
-            <span><b>Duration</b>: 90 mins</span>
-          </div>
-          <div class="col">
-            <span class="text-right"><b>Price</b>: P1500</span>
+            <span class="text-right"><b>Price</b>: P{{service.attributes.price}}</span>
           </div>
         </div>
       </div>
