--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
     <div class="list card">
-      <div class="item item-divider">
+      <div class="item item-divider" ng-click="redirectToAppointments()">
         <i class="icon ion-ios-book"></i>
-        <a href="#/tab/manage-appointments">Appointments</a>
+        Appointments
       </div>
-      <div class="item">
+      <div class="item" ng-click="redirectToAppointments()">
         <div class="row">
           <div class="col  text-center">
 
@@ -20,7 +20,7 @@
           </div>
         </div>
       </div>
-      <div class="item">
+      <div class="item" ng-click="redirectToAppointments()">
         <div class="row">
           <div class="row">
             <div class="col  text-center">
