--- a/www/templates/manage-schedule-calendar.html
+++ b/www/templates/manage-schedule-calendar.html
@@ -25,7 +25,7 @@
       <div>
         <button class="button" ng-disabled="isToday()" ng-click="today()">Today</button>
       </div>
-      <div>
+      <!-- <div>
         <button class="button" ng-click="changeMode('month')">M</button>
       </div>
       <div>
@@ -33,7 +33,7 @@
       </div>
       <div>
         <button class="button" ng-click="changeMode('day')">D</button>
-      </div>
+      </div> -->
 
 
       <!-- <button class="button" ng-click="loadEvents()">Load Events</button> -->
