--- a/www/css/style.css
+++ b/www/css/style.css
@@ -26,36 +26,165 @@
 	background-color: #46CA46 !important;
 }
 
-/*Disabling platform specific tweaks */
-.platform-ios.platform-cordova:not(.fullscreen) .bar-header
-{
-  height: 53px !important;
-}
-.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader)
-{
-  height: 53px !important;
+/* Chat */
+
+body {
+	cursor: url('http://ionicframework.com/img/finger.png'), auto;
 }
 
-.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader).item-input-inset .item-input-wrapper
-{
-  margin-top: 0px !important;
+/* allows the bar-footer to be elastic /*
+/* optionally set a max-height */
+/* maxlength on the textarea will prevent /*
+/* it from getting too large also */
+.bar-footer {
+	overflow: visible !important;
 }
 
-.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader) > *
-{
-  margin-top: 0px !important;
+.bar-footer textarea {
+	resize: none;
+	height: 25px;
+	width: 100%;
 }
 
-.platform-ios.platform-cordova:not(.fullscreen) .tabs-top > .tabs, .platform-ios.platform-cordova:not(.fullscreen) .tabs.tabs-top
-{
-  top: 53px !important;
+/* fixes an ios bug bear */
+button.ion-android-send {
+	padding-top: 2px;
 }
 
-.platform-ios.platform-cordova:not(.fullscreen) .has-header, .platform-ios.platform-cordova:not(.fullscreen) .bar-subheader
-{
-  top: 53px !important;
+/* add this to keep your footer buttons down
+at the bottom as the textarea resizes */
+.footer-btn-wrap {
+	position: relative;
+	height: 100%;
+	width: 50px;
+	top: 7px;
 }
 
-.platform-ios.platform-cordova:not(.fullscreen) .has-subheader {
-  top: 100px !important;
+.footer-btn {
+	position: absolute !important;
+	bottom: 0;
+}
+
+img.profile-pic {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 10px;
+}
+
+img.profile-pic.left {
+	left: 10px;
+}
+
+img.profile-pic.right {
+	right: 10px;
+}
+
+.ion-email {
+	float: right;
+	font-size: 32px;
+	vertical-align: middle;
+}
+
+.message {
+	font-size: 14px;
+}
+
+.message-detail {
+	white-space: nowrap;
+	font-size: 14px;
+}
+
+.bar.item-input-inset .item-input-wrapper input {
+	width: 100% !important;
+}
+
+.message-wrapper {
+	position: relative;
+}
+
+.message-wrapper:last-child {
+	margin-bottom: 10px;
+}
+
+.chat-bubble {
+	border-radius: 5px;
+	display: inline-block;
+	padding: 10px 18px;
+	position: relative;
+	margin: 10px;
+	max-width: 80%;
+}
+
+.chat-bubble:before {
+	content: "\00a0";
+	display: block;
+	height: 16px;
+	width: 9px;
+	position: absolute;
+	bottom: -7.5px;
+}
+
+.chat-bubble.left {
+	background-color: #e6e5eb;
+	float: left;
+	margin-left: 55px;
+}
+
+.chat-bubble.left:before {
+	background-color: #e6e5eb;
+	left: 10px;
+	-webkit-transform: rotate(70deg) skew(5deg);
+}
+
+.chat-bubble.right {
+	background-color: #158ffe;
+	color: #fff;
+	float: right;
+	margin-right: 55px;
+}
+
+.chat-bubble.right:before {
+	background-color: #158ffe;
+	right: 10px;
+	-webkit-transform: rotate(118deg) skew(-5deg);
+}
+
+.chat-bubble.right a.autolinker {
+	color: #fff;
+	font-weight: bold;
+}
+
+.user-messages-top-icon {
+	font-size: 28px;
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
+	top: -3px;
+	right: 5px;
+}
+
+.msg-header-username {
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
+	top: -3px;
+}
+
+input, textarea, .item-input, .item-input-wrapper {
+	background-color: white !important;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.cf {
+	clear: both !important;
+}
+
+a.autolinker {
+	color: #3b88c3;
+	text-decoration: none;
 }
