--- a/www/templates/manage-appointments.html
+++ b/www/templates/manage-appointments.html
@@ -43,11 +43,15 @@
     <div class="card">
       <div class="item item-divider">
       </div>
-      <a class="item" ng-repeat="completedAppointment in appointments.completed">
+      <a class="item item-button-right" ng-repeat="completedAppointment in appointments.completed">
         {{completedAppointment.attributes.customerInfo.firstName}} {{completedAppointment.attributes.customerInfo.lastName}}
-        <span class="item-note">
+
+        <button class="button button-balanced" ng-click="restoreAppointment(completedAppointment, true)">
+          Restore
+        </button>
+        <!-- <span class="item-note">
           {{completedAppointment.attributes.customerInfo.dateCompleted}}
-        </span>
+        </span> -->
       </a>
       <div style="background: #33cd5f; color: white;" class="item item-divider text-center">
         Completed
@@ -57,7 +61,7 @@
     <div class="card">
       <a class="item item-button-right" ng-repeat="canceledAppointment in appointments.canceled">
         {{canceledAppointment.attributes.customerInfo.firstName}} {{canceledAppointment.attributes.customerInfo.lastName}}
-        <button class="button button-assertive">
+        <button class="button button-assertive" ng-click="restoreAppointment(canceledAppointment)">
           Restore
         </button>
       </a>
