--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Account">
   <ion-content>
       <div  class="item" style="text-align: center; background: white; padding-top: 15px;">
-          <img src="img/diane.jpg" ng-click="showUploadOption()" style="width: 100px; border-radius: 50%; max-width: 100px; max-height: 100px; border-width: 3px; border-style: solid; border-color: goldenrod;" class="blush-avatar">
+          <img ng-src="{{profile.avatar || placeholder}}" ng-click="showUploadOption()" style="width: 100px; border-radius: 50%; max-width: 100px; max-height: 100px; border-width: 3px; border-style: solid; border-color: goldenrod;" class="blush-avatar">
           <h2>{{profile.firstName}} {{profile.lastName}}</h2>
           <p>{{profile.serviceType}}</p>
       </div>
