--- a/www/templates/manage-appointments.html
+++ b/www/templates/manage-appointments.html
@@ -10,7 +10,7 @@
     <div class="card">
       <div class="list">
 
-        <a class="item item-button-right" ng-repeat="pendingAppointment in appointments.pending">
+        <a class="item item-button-right" ng-repeat="pendingAppointment in appointments.pending | orderBy: '-attributes.updatedAt'">
           {{pendingAppointment.attributes.customerInfo.firstName}} {{pendingAppointment.attributes.customerInfo.lastName}} <br>
           <!-- <p>{{pendingAppointment.attributes.createdAt.toString() | limitTo:21}}</p> -->
           <span am-time-ago="pendingAppointment.attributes.createdAt" style="font-size: 11px;"></span>
@@ -29,8 +29,9 @@
     <div class="card">
       <div class="item item-divider">
       </div>
-      <a class="item item-button-right" ng-repeat="acceptedAppointment in appointments.accepted">
-        {{acceptedAppointment.attributes.customerInfo.firstName}} {{acceptedAppointment.attributes.customerInfo.lastName}}
+      <a class="item item-button-right" ng-repeat="acceptedAppointment in appointments.accepted | orderBy: '-attributes.updatedAt'">
+        {{acceptedAppointment.attributes.customerInfo.firstName}} {{acceptedAppointment.attributes.customerInfo.lastName}}<br>
+        <span am-time-ago="acceptedAppointment.attributes.updatedAt" style="font-size: 11px;"></span>
         <button class="button button-positive" ng-click="showBookingAlert(acceptedAppointment, 'Complete', 'button-balanced')">
           View
         </button>
@@ -43,9 +44,9 @@
     <div class="card">
       <div class="item item-divider">
       </div>
-      <a class="item item-button-right" ng-repeat="completedAppointment in appointments.completed">
-        {{completedAppointment.attributes.customerInfo.firstName}} {{completedAppointment.attributes.customerInfo.lastName}}
-
+      <a class="item item-button-right" ng-repeat="completedAppointment in appointments.completed | orderBy: '-attributes.updatedAt'">
+        {{completedAppointment.attributes.customerInfo.firstName}} {{completedAppointment.attributes.customerInfo.lastName}}<br>
+        <span am-time-ago="completedAppointment.attributes.updatedAt" style="font-size: 11px;"></span>
         <button class="button button-balanced" ng-click="restoreAppointment(completedAppointment, true)">
           Restore
         </button>
@@ -59,8 +60,9 @@
     </div>
 
     <div class="card">
-      <a class="item item-button-right" ng-repeat="canceledAppointment in appointments.canceled">
-        {{canceledAppointment.attributes.customerInfo.firstName}} {{canceledAppointment.attributes.customerInfo.lastName}}
+      <a class="item item-button-right" ng-repeat="canceledAppointment in appointments.canceled | orderBy: '-attributes.updatedAt'">
+        {{canceledAppointment.attributes.customerInfo.firstName}} {{canceledAppointment.attributes.customerInfo.lastName}}<br>
+        <span am-time-ago="canceledAppointment.attributes.updatedAt" style="font-size: 11px;"></span>
         <button class="button button-assertive" ng-click="restoreAppointment(canceledAppointment)">
           Restore
         </button>
