update chat and booking page

--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -17,7 +17,7 @@ Submit
 
 <ion-view id="userMessagesView"
 cache-view="false"
-view-title="Chat with {{toUser.username}}">
+view-title="{{toUser.username}} ({{isPubnubOnline}})">
 
 <div class="loader-center" ng-if="!doneLoading">
   <div class="loader">
