--- a/www/css/style.css
+++ b/www/css/style.css
@@ -188,3 +188,39 @@ a.autolinker {
 	color: #3b88c3;
 	text-decoration: none;
 }
+
+
+/*iOS override*/
+
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header
+{
+	height: 55px !important;
+}
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader)
+{
+	height: 55px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader).item-input-inset .item-input-wrapper
+{
+	margin-top: 0px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader) > *
+{
+	margin-top: 0px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .tabs-top > .tabs, .platform-ios.platform-cordova:not(.fullscreen) .tabs.tabs-top
+{
+	top: 75px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .has-header, .platform-ios.platform-cordova:not(.fullscreen) .bar-subheader
+{
+	top: 75px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .has-subheader {
+	top: 110px !important;
+}
